ecmascript/parser/tests/typescript-errors/tsc/scanner/ecmascript5/scannerNumericLiteral3/input.ts.stderr
error: Expected ';', '}' or <eof>
 --> $DIR/tests/typescript-errors/tsc/scanner/ecmascript5/scannerNumericLiteral3/input.ts:2:3
  |
2 | 01.0
  |   ^^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/typescript-errors/tsc/scanner/ecmascript5/scannerNumericLiteral3/input.ts:2:1
  |
2 | 01.0
  | ^^

error: Legacy octal literals are not available when targeting ECMAScript 5 and higher
 --> $DIR/tests/typescript-errors/tsc/scanner/ecmascript5/scannerNumericLiteral3/input.ts:2:1
  |
2 | 01.0
  | ^^

error: Legacy octal escape is not permitted in strict mode
 --> $DIR/tests/typescript-errors/tsc/scanner/ecmascript5/scannerNumericLiteral3/input.ts:2:1
  |
2 | 01.0
  | ^^

